--- a/Workbit.App/Views/_ViewImports.cshtml
+++ b/Workbit.App/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using Workbit.App.Models
 @using Workbit.Infrastructure.Database.Entities;
 @using Workbit.Infrastructure.Database.Entities.Account;
+@using Workbit.Core.Models.Account;
+@using Workbit.App.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
