--- a/Workbit.App/Views/_ViewImports.cshtml
+++ b/Workbit.App/Views/_ViewImports.cshtml
@@ -3,5 +3,7 @@
 @using Workbit.Infrastructure.Database.Entities;
 @using Workbit.Infrastructure.Database.Entities.Account;
 @using Workbit.Core.Models.Account;
+@using Workbit.Core.Models.Ceo;
+@using Workbit.Core.Models.Department;
 @using Workbit.App.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
