--- a/Workbit.App/Views/_ViewImports.cshtml
+++ b/Workbit.App/Views/_ViewImports.cshtml
@@ -4,6 +4,13 @@
 @using Workbit.Infrastructure.Database.Entities.Account;
 @using Workbit.Core.Models.Account;
 @using Workbit.Core.Models.Ceo;
+@using Workbit.Core.Models.Company;
+@using Workbit.Core.Models.Attendance;
 @using Workbit.Core.Models.Department;
+@using Workbit.Core.Models.Manager;
+@using Workbit.Core.Models.Payment;
+@using Workbit.Core.Models.Employee;
+@using Workbit.Core.Models.Job;
 @using Workbit.App.Extensions
+@using static Workbit.Common.DataConstants.Constants;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
